Add external references

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
-  <head></head>
+  <head>
+    <link rel=¨stylesheet¨ type=¨text/css¨ href=¨style.css¨>
+  </head>
   <body>
     <div class="wrapper">
       <p>Check out some <a href="http://knsv.github.io/mermaid/#things-to-be-done-in-order-to-add-a-new-diagram-type" target="_blank">demos</a> to see what you can put in the text area below.</p>
@@ -11,5 +13,7 @@
       </textarea>
       <div class="btn"><a id="render" class="button">render</a></div>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mermaid/7.0.0/mermaid.min.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
